[gd_scene load_steps=26 format=3 uid="uid://cmmskdyow6j7v"]

[ext_resource type="Script" path="res://battle/battle.gd" id="1_biix4"]
[ext_resource type="Texture2D" uid="uid://c6sxntpkdncjw" path="res://battle/sprites/button/act.png" id="1_i0c17"]
[ext_resource type="Texture2D" uid="uid://be34uxfm43i85" path="res://battle/sprites/button/fight.png" id="1_r68k2"]
[ext_resource type="Texture2D" uid="uid://dyeghrx3qpn6e" path="res://battle/sprites/button/fight0.png" id="2_1j0lq"]
[ext_resource type="PackedScene" uid="uid://d314wg6nt1vyv" path="res://battle/enemies/Froggit.tscn" id="2_2b3jl"]
[ext_resource type="Texture2D" uid="uid://dyyef060vig1f" path="res://battle/bg/spr_battlebg/spr_battlebg_0.png" id="2_fcjl2"]
[ext_resource type="PackedScene" uid="uid://mtu30mfbq7h6" path="res://battle/textbox/BattleTextbox.tscn" id="2_v63as"]
[ext_resource type="Texture2D" uid="uid://b33tr1cajaliq" path="res://battle/sprites/button/act0.png" id="2_yb0ki"]
[ext_resource type="Texture2D" uid="uid://bj1obrxtrw32n" path="res://battle/sprites/button/item.png" id="3_1p5cf"]
[ext_resource type="Texture2D" uid="uid://b0tfl4er525rq" path="res://battle/bg/spr_battlebg/spr_battlebg_1.png" id="3_vn3ml"]
[ext_resource type="Texture2D" uid="uid://b4p635bmjtdr6" path="res://battle/sprites/button/item0.png" id="4_c1alr"]
[ext_resource type="Texture2D" uid="uid://hsarwapvlek2" path="res://battle/sprites/button/mercy.png" id="5_vp1l3"]
[ext_resource type="Texture2D" uid="uid://p50g2ahoq8ip" path="res://battle/sprites/button/mercy0.png" id="6_7goab"]
[ext_resource type="LabelSettings" uid="uid://bqjgueck1kdbu" path="res://battle/battleLabels.tres" id="10_tg4yi"]
[ext_resource type="Texture2D" uid="uid://dltiyb7v0ug1p" path="res://battle/sprites/HP.png" id="11_qmj8h"]
[ext_resource type="Texture2D" uid="uid://dw4h8wp204in" path="res://dialogue/MenuTiles.png" id="12_qcm6w"]
[ext_resource type="PackedScene" uid="uid://bb0t6dgghm2ws" path="res://battle/heart.tscn" id="13_6eybr"]
[ext_resource type="LabelSettings" uid="uid://dh3sml5457ddq" path="res://dialogue/Textbox.tres" id="16_rm7cp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0uwy1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fcjl2")
}, {
"duration": 1.0,
"texture": ExtResource("3_vn3ml")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_bl4fk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_i0c17")
}, {
"duration": 1.0,
"texture": ExtResource("2_yb0ki")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_tm5fy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_1p5cf")
}, {
"duration": 1.0,
"texture": ExtResource("4_c1alr")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_wcc4l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_vp1l3")
}, {
"duration": 1.0,
"texture": ExtResource("6_7goab")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_40dy1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_r68k2")
}, {
"duration": 1.0,
"texture": ExtResource("2_1j0lq")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bjt21"]
size = Vector2(3, 336.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yg3pf"]
size = Vector2(551, 3)

[node name="Battle" type="Node2D"]
script = ExtResource("1_biix4")

[node name="BG" type="AnimatedSprite2D" parent="."]
z_index = -1
sprite_frames = SubResource("SpriteFrames_0uwy1")
centered = false

[node name="EnemyLabel" type="Label" parent="."]
z_index = 1
offset_left = 85.0
offset_top = 271.0
offset_right = 146.0
offset_bottom = 287.0
scale = Vector2(2, 2)
text = "* Froggit"
label_settings = ExtResource("16_rm7cp")
visible_characters = 0
visible_ratio = 0.0
metadata/_edit_lock_ = true

[node name="BattleTextbox" parent="." instance=ExtResource("2_v63as")]
offset_left = 53.0
offset_top = 271.0
offset_right = 53.0
offset_bottom = 271.0
scale = Vector2(2, 2)
metadata/_edit_lock_ = true

[node name="enemies" type="Node" parent="."]

[node name="Froggit" parent="enemies" instance=ExtResource("2_2b3jl")]
position = Vector2(271, 188)

[node name="Froggit2" parent="enemies" instance=ExtResource("2_2b3jl")]
position = Vector2(473, 189)

[node name="Heart" parent="." instance=ExtResource("13_6eybr")]
z_index = 1
position = Vector2(49, 454)

[node name="ActSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(240, 453)
sprite_frames = SubResource("SpriteFrames_bl4fk")
metadata/_edit_lock_ = true

[node name="ItemSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(393, 453)
sprite_frames = SubResource("SpriteFrames_tm5fy")
metadata/_edit_lock_ = true

[node name="MercySprite" type="AnimatedSprite2D" parent="."]
position = Vector2(546, 453)
sprite_frames = SubResource("SpriteFrames_wcc4l")
metadata/_edit_lock_ = true

[node name="FightSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(87, 453)
sprite_frames = SubResource("SpriteFrames_40dy1")
metadata/_edit_lock_ = true

[node name="StatsLabel" type="Label" parent="."]
offset_left = 30.0
offset_top = 400.0
offset_right = 99.0
offset_bottom = 424.0
text = "Chara   LV1"
label_settings = ExtResource("10_tg4yi")
uppercase = true
metadata/_edit_lock_ = true

[node name="HPsprite" type="Sprite2D" parent="."]
position = Vector2(256, 410)
texture = ExtResource("11_qmj8h")
metadata/_edit_lock_ = true

[node name="HPMax" type="ColorRect" parent="."]
offset_left = 275.0
offset_top = 400.0
offset_right = 300.0
offset_bottom = 421.0
color = Color(1, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="HP" type="ColorRect" parent="."]
offset_left = 275.0
offset_top = 400.0
offset_right = 300.0
offset_bottom = 421.0
color = Color(1, 1, 0, 1)
metadata/_edit_lock_ = true

[node name="HPtext" type="Label" parent="."]
offset_left = 314.0
offset_top = 400.0
offset_right = 354.0
offset_bottom = 423.0
text = "20 / 20"
label_settings = ExtResource("10_tg4yi")
metadata/_edit_lock_ = true

[node name="boxRect" type="NinePatchRect" parent="."]
offset_left = 32.0
offset_top = 250.0
offset_right = 316.5
offset_bottom = 320.0
scale = Vector2(2, 2)
texture = ExtResource("12_qcm6w")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="boxRectCollision" type="StaticBody2D" parent="boxRect"]
visible = false

[node name="left" type="CollisionShape2D" parent="boxRect/boxRectCollision"]
position = Vector2(1.5, -3.75)
shape = SubResource("RectangleShape2D_bjt21")

[node name="right" type="CollisionShape2D" parent="boxRect/boxRectCollision"]
position = Vector2(283, 35)
shape = SubResource("RectangleShape2D_bjt21")

[node name="top" type="CollisionShape2D" parent="boxRect/boxRectCollision"]
position = Vector2(132, 1.5)
shape = SubResource("RectangleShape2D_yg3pf")

[node name="bottom" type="CollisionShape2D" parent="boxRect/boxRectCollision"]
position = Vector2(144, 68.5)
shape = SubResource("RectangleShape2D_yg3pf")
